--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
             </div>
         </div>
     </div>
+    <!--
+    git init
+    git add README.md
+    git commit -m "first commit"
+    git branch -M main
+    git remote add origin https://github.com/npmhoang3010/music-player.git
+    git push -u origin main -->
 </body>
 </html>
+
