--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="btn">
                     <i class="fa-solid fa-backward"></i>
                 </div>
-                <div class="btn">
+                <div class="btn btn-play">
                     <i class="fa-solid fa-play"></i>
                 </div>
                 <div class="btn">
@@ -48,15 +48,170 @@
         <div class="playlist">
             <div class="playlist__item">
                 <div class="playlist__item-thumb">
-
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
                 </div>
 
                 <div class="playlist__item-body">
-
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
                 </div>
 
                 <div class="playlist__item-option">
-                    
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
+                </div>
+            </div>
+            <div class="playlist__item">
+                <div class="playlist__item-thumb">
+                    <img src="./assets/img/player-img-01.jpg" alt="" class="playlist__item-img">
+                </div>
+
+                <div class="playlist__item-body">
+                    <h3 class="playlist__item-name">Dan choi sao phai khoc</h3>
+                    <p class="playlist__item-actors">Andree</p>
+                </div>
+
+                <div class="playlist__item-option">
+                    <i class="fa-solid fa-ellipsis"></i>    
                 </div>
             </div>
         </div>
